--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,31 +3,16 @@ version: '${version}'
 main: org.shotrush.atom.Atom
 api-version: '1.21'
 folia-supported: true
-author: ShotRush
-description: Atomized specialization plugin for emergent player-driven classes with Folia support
+authors: [ShotRush]
+description: Robust core for hyper-realistic survival with display entity support
+website: https://github.com/ShotRush/atom
 
-permissions:
-  atom.use:
-    description: Open the Atom GUI
-    default: true
-  atom.stats:
-    description: View your own statistics
-    default: true
-  atom.stats.others:
-    description: View other players' statistics
-    default: op
-  atom.actions:
-    description: List all available actions
-    default: true
-  atom.milestones:
-    description: View your milestones
-    default: true
-  atom.admin.reload:
-    description: Reload the plugin configuration
-    default: op
-  atom.admin.set:
-    description: Set player experience
-    default: op
-  atom.admin.add:
-    description: Add player experience
-    default: op
+commands:
+  atom:
+    description: Main Atom command
+    usage: /atom <subcommand>
+    aliases: [atm]
+  tfc:
+    description: TFC command
+    usage: /tfc <subcommand>
+    aliases: [terrafirmacraft]
