Remove outdated Foraging Age components and introduce Copper and Bronze Age assets
- Deleted unused `GrassDrops`, `GroundStick`, `SpearProjectileListener`, and `WoodSpear` classes.
- Introduced Copper and Bronze Age categories with updated `categories.yml` and translations.
- Added new items including `raw_tin`, with configurations in `tin.yml`, textures, and models for related assets.
- Updated block loot tables (`pebble.yml`, `grass.yml`) for new materials.
- Added utility methods to streamline item matching (`Util.kt`).

--- a/run/plugins/CraftEngine/resources/atom/configuration/blocks/pebble.yml
+++ b/run/plugins/CraftEngine/resources/atom/configuration/blocks/pebble.yml
@@ -56,6 +56,39 @@ items:
                             properties:
                               pebble: 2
                       - type: explosion_decay
+              - rolls: 1
+                entries:
+                  - type: item
+                    item: minecraft:raw_copper
+                    functions:
+                      - type: set_count
+                        count: 1
+                        add: false
+                    conditions:
+                      - type: random
+                        value: 0.01
+              - rolls: 1
+                entries:
+                  - type: item
+                    item: minecraft:raw_iron
+                    functions:
+                      - type: set_count
+                        count: 1
+                        add: false
+                    conditions:
+                      - type: random
+                        value: 0.01
+              - rolls: 1
+                entries:
+                  - type: item
+                    item: minecraft:raw_tin
+                    functions:
+                      - type: set_count
+                        count: 1
+                        add: false
+                    conditions:
+                      - type: random
+                        value: 0.01
           states:
             id: 0
             properties:
