--- a/run/plugins/CraftEngine/resources/atom/configuration/ui/molding.yml
+++ b/run/plugins/CraftEngine/resources/atom/configuration/ui/molding.yml
@@ -1,13 +1,25 @@
 items:
-  atom:ui_molding:
+  atom:ui_molding_clay:
     material: paper
     model:
       template: default:model/simplified_generated
       arguments:
         path: minecraft:ui/clay
-  atom:ui_molding_pressed:
+  atom:ui_molding_clay_pressed:
     material: paper
     model:
       template: default:model/simplified_generated
       arguments:
         path: minecraft:ui/clay_dark
+  atom:ui_molding_wax:
+    material: paper
+    model:
+      template: default:model/simplified_generated
+      arguments:
+        path: minecraft:ui/wax
+  atom:ui_molding_wax_pressed:
+    material: paper
+    model:
+      template: default:model/simplified_generated
+      arguments:
+        path: minecraft:ui/wax_dark
