Add Pebble Sharpening system and update related item, block, and localization configurations.

--- a/run/plugins/CraftEngine/resources/atom/configuration/blocks/pebble.yml
+++ b/run/plugins/CraftEngine/resources/atom/configuration/blocks/pebble.yml
@@ -11,7 +11,7 @@ items:
       components:
         minecraft:consumable: {
           consume_seconds: 10000,
-          animation: "bow"
+          animation: "brush"
         }
     model:
       template: default:model/simplified_generated
