knapping station recipe

--- a/run/plugins/CraftEngine/resources/atom/configuration/blocks/knapping_station.yml
+++ b/run/plugins/CraftEngine/resources/atom/configuration/blocks/knapping_station.yml
@@ -44,7 +44,7 @@ recipes:
       - A
     ingredients:
       A: "#minecraft:logs"
-      B: atom:pebble
+      B: "#atom:leather"
     result:
       id: atom:knapping_station
       count: 1
