--- a/run/plugins/CraftEngine/resources/atom/configuration/auto/wood_recipes.yml
+++ b/run/plugins/CraftEngine/resources/atom/configuration/auto/wood_recipes.yml
@@ -27,10 +27,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_oak_log
+      A: "#minecraft:axes"
+      L: minecraft:oak_log
     result:
-      id: minecraft:oak_stripped_log
+      id: minecraft:stripped_oak_log
       count: 1
   atom:oak_planks_to_slab:
     type: shaped
@@ -134,10 +134,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_spruce_log
+      A: "#minecraft:axes"
+      L: minecraft:spruce_log
     result:
-      id: minecraft:spruce_stripped_log
+      id: minecraft:stripped_spruce_log
       count: 1
   atom:spruce_planks_to_slab:
     type: shaped
@@ -241,10 +241,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_birch_log
+      A: "#minecraft:axes"
+      L: minecraft:birch_log
     result:
-      id: minecraft:birch_stripped_log
+      id: minecraft:stripped_birch_log
       count: 1
   atom:birch_planks_to_slab:
     type: shaped
@@ -348,10 +348,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_jungle_log
+      A: "#minecraft:axes"
+      L: minecraft:jungle_log
     result:
-      id: minecraft:jungle_stripped_log
+      id: minecraft:stripped_jungle_log
       count: 1
   atom:jungle_planks_to_slab:
     type: shaped
@@ -455,10 +455,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_acacia_log
+      A: "#minecraft:axes"
+      L: minecraft:acacia_log
     result:
-      id: minecraft:acacia_stripped_log
+      id: minecraft:stripped_acacia_log
       count: 1
   atom:acacia_planks_to_slab:
     type: shaped
@@ -562,10 +562,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_dark_oak_log
+      A: "#minecraft:axes"
+      L: minecraft:dark_oak_log
     result:
-      id: minecraft:dark_oak_stripped_log
+      id: minecraft:stripped_dark_oak_log
       count: 1
   atom:dark_oak_planks_to_slab:
     type: shaped
@@ -669,10 +669,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_cherry_log
+      A: "#minecraft:axes"
+      L: minecraft:cherry_log
     result:
-      id: minecraft:cherry_stripped_log
+      id: minecraft:stripped_cherry_log
       count: 1
   atom:cherry_planks_to_slab:
     type: shaped
@@ -776,10 +776,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_pale_oak_log
+      A: "#minecraft:axes"
+      L: minecraft:pale_oak_log
     result:
-      id: minecraft:pale_oak_stripped_log
+      id: minecraft:stripped_pale_oak_log
       count: 1
   atom:pale_oak_planks_to_slab:
     type: shaped
@@ -883,10 +883,10 @@ recipes:
       - A
       - L
     ingredients:
-      A: "#atom:tool_axe"
-      L: minecraft:stripped_mangrove_log
+      A: "#minecraft:axes"
+      L: minecraft:mangrove_log
     result:
-      id: minecraft:mangrove_stripped_log
+      id: minecraft:stripped_mangrove_log
       count: 1
   atom:mangrove_planks_to_slab:
     type: shaped
